--- a/codeatlas-frontend/package.json
+++ b/codeatlas-frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.11.0",
     "cytoscape": "^3.33.1",
     "cytoscape-dagre": "^2.5.0",
+    "dotenv": "^17.2.2",
     "firebase": "^12.2.1",
     "react": "^19.1.1",
     "react-cytoscapejs": "^2.0.0",
