projects and search
1) in the commit heatmap, when the user clicks on a commit, they can see the details of the commit for that day

2) modified the ui of the search bar and implement ctrl + k to see the search bar as a modal.

--- a/codeatlas-backend/package.json
+++ b/codeatlas-backend/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.11.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
+    "esprima": "^4.0.1",
     "express": "^5.1.0",
     "globby": "^14.1.0",
     "path": "^0.12.7",
