--- a/codeatlas-frontend/package.json
+++ b/codeatlas-frontend/package.json
@@ -16,10 +16,12 @@
     "dotenv": "^17.2.2",
     "firebase": "^12.2.1",
     "react": "^19.1.1",
+    "react-calendar-heatmap": "^1.10.0",
     "react-cytoscapejs": "^2.0.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
+    "react-tooltip": "^5.29.1",
     "reactflow": "^11.11.4"
   },
   "devDependencies": {
