--- a/codeatlas-frontend/package.json
+++ b/codeatlas-frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
+    "bcryptjs": "^3.0.2",
     "cytoscape": "^3.33.1",
     "cytoscape-dagre": "^2.5.0",
     "dotenv": "^17.2.2",
