--- a/codeatlas-backend/package.json
+++ b/codeatlas-backend/package.json
@@ -22,7 +22,8 @@
     "globby": "^14.1.0",
     "path": "^0.12.7",
     "pg": "^8.16.3",
-    "simple-git": "^3.28.0"
+    "simple-git": "^3.28.0",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
