--- a/codeatlas-frontend/package.json
+++ b/codeatlas-frontend/package.json
@@ -23,7 +23,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
     "react-tooltip": "^5.29.1",
-    "reactflow": "^11.11.4"
+    "reactflow": "^11.11.4",
+    "recharts": "^3.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
