--- a/codeatlas-frontend/package.json
+++ b/codeatlas-frontend/package.json
@@ -20,6 +20,7 @@
     "react-calendar-heatmap": "^1.10.0",
     "react-cytoscapejs": "^2.0.0",
     "react-dom": "^19.1.1",
+    "react-force-graph-2d": "^1.29.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
     "react-tooltip": "^5.29.1",
