--- a/codeatlas-frontend/package.json
+++ b/codeatlas-frontend/package.json
@@ -20,8 +20,10 @@
     "react-calendar-heatmap": "^1.10.0",
     "react-cytoscapejs": "^2.0.0",
     "react-dom": "^19.1.1",
+    "react-flags-select": "^2.5.0",
     "react-force-graph-2d": "^1.29.0",
     "react-icons": "^5.5.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.8.2",
     "react-tooltip": "^5.29.1",
     "reactflow": "^11.11.4",
